# repo-ctx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  config.yaml.example  graph.dot  mkdocs.yml  notify.md  pyproject.toml
.github/: labels.yml
.github/workflows/: docs.yml  labels.yml  publish.yml  test.yml
docs/: BACKLOG.md  DEPENDENCY_GRAPH.md  RELEASE_GUIDE.md  USER_GUIDE.md  architecture_analysis_guide.md  configuration.md  cpg-output-guide.md  dev_guide.md  github_actions.md  index.md  mcp_tools_reference.md  multi-provider-guide.md  pypi_publishing.md  refactoring_analysis_guide.md  release_guide.md  repo_ctx_extension_recommendations.md  testing_guide.md  user_guide.md
docs/architecture/: ADR_001_local_provider_architecture.md  ADR_001_provider_abstraction.md  ADR_002_dependency_graph.md
docs/requirements/: semantic-code-analysis.md
examples/joern-test-data/: README.md  analyze_examples.py  analyze_examples.sh
examples/joern-test-data/c/: sample.c
examples/joern-test-data/cpp/: sample.cpp
examples/joern-test-data/csharp/: Sample.cs
examples/joern-test-data/go/: sample.go
examples/joern-test-data/java/: Sample.java
examples/joern-test-data/javascript/: sample.js
examples/joern-test-data/kotlin/: sample.kt
examples/joern-test-data/php/: sample.php
examples/joern-test-data/python/: conftest.py  sample.py  test_agents.py  test_e2e.py  test_formatters.py  test_llm.py  test_progress.py  test_state.py  test_tools.py  test_workflow.py
examples/joern-test-data/ruby/: sample.rb
examples/joern-test-data/smalltalk/: sample.st
examples/joern-test-data/smalltalk/visualworks/: sample.st
examples/joern-test-data/swift/: sample.swift
repo_ctx/: __init__.py  __main__.py  config.py  core.py  exceptions.py  gitlab_client.py  llmstxt.py  mcp_server.py  mcp_tools_ctx.py  models.py  operations.py  parameters.py  parser.py  progress.py  storage.py  tool_names.py
repo_ctx/analysis/: __init__.py  architecture.py  architecture_rules.py  code_analyzer.py  codebase_summarizer.py  dependency_graph.py  file_enhancer.py  generic_extractor.py  interactive_graph.py  java_extractor.py  javascript_extractor.py  kotlin_extractor.py  models.py  prompts.py  python_extractor.py  report_generator.py  smalltalk_extractor.py  structural_metrics.py
repo_ctx/analysis/smalltalk/: __init__.py  base.py  cincom_extractor.py  fileout_parser.py  method_parser.py  standard_extractor.py
repo_ctx/api/: __init__.py  __main__.py  app.py  auth.py  middleware.py  version.py
repo_ctx/api/routes/: __init__.py  analysis.py  auth.py  docs.py  health.py  indexing.py  info.py  progress.py  repositories.py  search.py  tasks.py
repo_ctx/cli/: __init__.py  commands.py  context.py  flat_commands.py  interactive.py  target.py
repo_ctx/client/: __init__.py  client.py  models.py
repo_ctx/joern/: __init__.py  adapter.py  cli.py  formatter.py  languages.py  mapper.py  parser.py  queries.py
repo_ctx/joern/scripts/: custom_query.sc  extract_all.sc  extract_calls.sc  extract_methods.sc  extract_types.sc
repo_ctx/mcp/: __init__.py  context.py  formatters.py  server_context.py
repo_ctx/migrations/: 002_code_analysis.sql  003_add_provider.sql
repo_ctx/providers/: __init__.py  base.py  detector.py  exceptions.py  factory.py  github.py  gitlab.py  local.py
repo_ctx/services/: __init__.py  analysis.py  base.py  chunking.py  combined_search.py  dump.py  embedding.py  enrichment.py  indexing.py  llm.py  progress.py  repository.py  search.py
repo_ctx/storage/: __init__.py  content.py  graph.py  legacy.py  protocols.py  vector.py
tests/: __init__.py  conftest.py  test_analysis_java.py  test_analysis_javascript.py  test_analysis_kotlin.py  test_analysis_python.py  test_analysis_service.py  test_api.py  test_architecture_analysis.py  test_architecture_layers.py  test_auth.py  test_chunking.py  test_cli_commands.py  test_cli_flat_commands.py  test_cli_services.py  test_cli_target.py  test_client.py  test_code_analyzer.py  test_codebase_summarizer.py  test_combined_search.py  test_config.py  test_config_v2.py  test_content_storage.py  test_core.py  test_dependency_graph.py  test_dump_service.py  test_embedding_service.py  test_enrichment.py  test_exceptions.py  test_file_enhancer.py  test_generic_extractor.py  test_graph_search.py  test_graph_storage.py  test_indexing_service.py  test_interactive_graph.py  test_joern_adapter.py  test_joern_cli.py  test_joern_mapper.py  test_joern_parser.py  test_llm_api.py  (+25 more)
