[project]
name = "repo-ctx"
version = "0.1.3"
description = "Git repository documentation indexer with MCP server, CLI, and library interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Oliver Sick"}
]
keywords = ["git", "gitlab", "github", "mcp", "documentation", "indexing", "context", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "python-gitlab>=4.0.0",
    "markdown-it-py>=3.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/osick/repo-ctx"
Repository = "https://github.com/osick/repo-ctx"
Issues = "https://github.com/osick/repo-ctx/issues"

[project.scripts]
repo-ctx = "repo_ctx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["repo_ctx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
